updated content on place-pages

--- a/src/places.html
+++ b/src/places.html
@@ -116,18 +116,18 @@
                            <img src="images/img-7.jpg" class="image_2">
                         </div>
                         <h3 class="decorate_text">MANA</h3>
-                        <p class="tation_text">The historic town of Srinagar is cradled on the pristine banks of Alaknanda River and 560 metres above the sea level. The pristine town of Srinagar is an important cultural and educational centre. It is an important point of stay during Badrinath, Kedarnath and Char Dham Yatra.</p>
+                        <p class="tation_text">Mana is a last Indian village from the border of India and Tibet/China in the Himalayas. It is located in the district of Chamoli. It’s been designated as a “Tourism Village” by the Uttarakhand government. The village is on the banks of the River Saraswati.</p>
                         <div class="readmore_bt"><a href="places/mana.html">Read More</a></div>
                      </div>
                   </div>
                   <div class="col-lg-4 col-sm-12 col-md-4">
                      <div class="box_main">
                         <div class="house_icon">
-                           <img src="images/img-6.jpg" class="image_1">
-                           <img src="images/img-6.jpg" class="image_2">
+                           <img src="images/img-16.jpg" class="image_1">
+                           <img src="images/img-16.jpg" class="image_2">
                         </div>
                         <h3 class="decorate_text">HARIDWAR</h3>
-                        <p class="tation_text">Adorned in the undisturbed vistas of the beguiling Garhwal Himalayas, lies the city of Pauri. It is enclosed by the thick woodlands and the benevolent snow-clad hills that appear like a silver tiara. Pauri is a hidden treassure, with one of the most beautiful sunset in Uttarakhand.</p>
+                        <p class="tation_text">An ancient city, Haridwar's roots are steeped deep in culture and traditions of the ancient Vedic times, and there are several institutions here imparting traditional knowledge of wellness and also there are many certified Ayurvedic clinics in Haridwar that you can visit.</p>
                         <div class="readmore_bt"><a href="places/haridwar.html">Read More</a></div>
                      </div>
                   </div>
@@ -138,7 +138,7 @@
                            <img src="images/img-6.jpg" class="image_2">
                         </div>
                         <h3 class="decorate_text">RUDRAPRAYAG</h3>
-                        <p class="tation_text">The celestial town of Devprayag is positioned at an elevation of 830 meters above sea level. Devprayag is the last Prayag or the holy confluence of the Alaknanda River, from here that the confluence of Alaknanda and Bhagirathi River is known as Ganga.</p>
+                        <p class="tation_text">The famed town of Rudraprayag is named after the Rudra avatar of Lord Shiva. This heavenly town is encircled by the emerald lakes, glaciers, foaming rivers and silver streams. Rudraprayag is one of the Panch Prayag or five confluences of Alaknanda River.</p>
                         <div class="readmore_bt"><a href="places/rudraprayag.html">Read More</a></div>
                      </div>
                   </div>
