--- a/src/places/devprayag.html
+++ b/src/places/devprayag.html
@@ -69,12 +69,14 @@
                <div class="place_title">Devprayag</div>
                <div class="col-md-6">
                   <div class="place_title_main">
-                     <p class="place_text">We are a group of people working together with a common mindset. Our vision is to make travelling easier and safer. We visit places, talk to local people and then review places along with genuine feedback from other visitors and latest images.</p>
-                     <p class="place_text">Apart from all these, We provide overview of the local people behavior and supportiveness, cleaniness around the spot and accessibility to the basic need items.</p>
+                     <div class="place_topics">overview</div>
+                     <p class="place_text">Devprayag: Confluence of Divinity and Scenic Splendor</p>
+                     <p class="place_text">The town's name, "Devprayag," translates to "Godly Confluence," a title that aptly encapsulates its significance. Hindu mythology reverberates through its very essence, as it is believed to be the exact spot where Lord Rama performed a penance to cleanse himself after defeating the demon king Ravana. The Raghunathji Temple, dedicated to Lord Rama, stands as a testament to this divine connection.</p>
+                     <p class="place_text">The town's architectural splendor and local culture further enrich the experience. Devotees and travelers alike can explore ancient temples, engage with local artisans, and partake in festivals that celebrate the region's vibrant heritage.</p>
                   </div>
                </div>
                <div class="col-md-6">
-                  <div class="place_image" style="margin-top: 50px;"><img src="../images/img-7.jpg"></div>
+                  <div class="place_image" style="margin-top: 50px;"><img src="../images/img-15.jpg"></div>
                </div>
             </div>
          </div>
@@ -85,8 +87,11 @@
                </div>
                <div class="col-md-6">
                   <div class="place_title_main">
-                     <p class="place_text">We are a group of people working together with a common mindset. Our vision is to make travelling easier and safer. We visit places, talk to local people and then review places along with genuine feedback from other visitors and latest images.</p>
-                     <p class="place_text">Apart from all these, We provide overview of the local people behavior and supportiveness, cleaniness around the spot and accessibility to the basic need items.</p>
+                     <div class="place_topics">Public Sentiments</div>
+                     <p class="place_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Error officiis sequi est unde corrupti voluptatem molestiae facilis. Repellat tenetur in suscipit, eos voluptatem porro necessitatibus numquam aperiam vero voluptatibus omnis?
+                     Nihil quaerat mollitia possimus eligendi libero corporis excepturi, recusandae, beatae placeat quis repellat debitis, accusantium ad? Beatae, amet repellendus expedita odio perspiciatis quos, quibusdam suscipit nulla quia mollitia voluptas aut!</p>
+                     <p class="place_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem natus consequatur doloremque facere laudantium velit debitis, nulla molestiae molestias delectus cupiditate nesciunt excepturi fuga id veritatis vero aperiam? Dolor, quis?
+                     Praesentium aspernatur fugiat vel aperiam debitis aliquid quis sequi veniam voluptatum.</p>
                   </div>
                </div>
             </div>
@@ -95,12 +100,23 @@
             <div class="row">
                <div class="col-md-6">
                   <div class="place_title_main">
-                     <p class="place_text">We are a group of people working together with a common mindset. Our vision is to make travelling easier and safer. We visit places, talk to local people and then review places along with genuine feedback from other visitors and latest images.</p>
-                     <p class="place_text">Apart from all these, We provide overview of the local people behavior and supportiveness, cleaniness around the spot and accessibility to the basic need items.</p>
+                     <div class="place_topics">Suggestion and Instructions</div>
+                     <div>
+                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
+                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
+                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
+                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
+                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
+                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
+                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
+                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
+                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
+                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
+                     </div>
                   </div>
                </div>
                <div class="col-md-6">
-                  <div class="place_image" style="margin-top: 50px;"><img src="../images/img-9.JPG"></div>
+                  <div class="place_image" style="margin-top: 50px;"><img src="../images/img-14.jpg"></div>
                </div>
             </div>
          </div>
