--- a/src/places/haridwar.html
+++ b/src/places/haridwar.html
@@ -69,24 +69,29 @@
                <div class="place_title">HARIDWAR</div>
                <div class="col-md-6">
                   <div class="place_title_main">
-                     <p class="place_text">We are a group of people working together with a common mindset. Our vision is to make travelling easier and safer. We visit places, talk to local people and then review places along with genuine feedback from other visitors and latest images.</p>
-                     <p class="place_text">Apart from all these, We provide overview of the local people behavior and supportiveness, cleaniness around the spot and accessibility to the basic need items.</p>
+                    <div class="place_topics">overview</div>
+                     <p class="place_text">Haridwar: Gateway to Spiritual Enlightenment</p>
+                     <p class="place_text">Nestled along the banks of the holy Ganges River in the Indian state of Uttarakhand, Haridwar stands as a timeless city steeped in spiritual heritage and cultural significance. Its name, "Haridwar," translates to "Gateway to God," and rightfully so, as it has been a revered pilgrimage destination for centuries.</p>
+                     <p class="place_text">The city's aura is enriched by the countless devotees who flock to its ghats (steps leading to the river) to partake in the sacred act of taking a dip in the Ganges, believed to cleanse the soul of sins. The Ganga Aarti, a mesmerizing ritual where lamps are floated down the river accompanied by hymns, creates an ethereal ambiance that resonates with spiritual seekers.Haridwar's historical essence is epitomized by its ancient temples, each with its own tale of reverence.</p>
                   </div>
                </div>
                <div class="col-md-6">
-                  <div class="place_image" style="margin-top: 50px;"><img src="../images/img-7.jpg"></div>
+                  <div class="place_image" style="margin-top: 50px;"><img src="../images/img-16.jpg"></div>
                </div>
             </div>
          </div>
          <div class="container">
             <div class="row">
                <div class="col-md-6">
-                  <div class="place_image" style="margin-top: 50px;"><img src="../images/img-8.JPG"></div>
+                  <div class="place_image" style="margin-top: 50px;"><img src="../images/img-17.jpg"></div>
                </div>
                <div class="col-md-6">
                   <div class="place_title_main">
-                     <p class="place_text">We are a group of people working together with a common mindset. Our vision is to make travelling easier and safer. We visit places, talk to local people and then review places along with genuine feedback from other visitors and latest images.</p>
-                     <p class="place_text">Apart from all these, We provide overview of the local people behavior and supportiveness, cleaniness around the spot and accessibility to the basic need items.</p>
+                    <div class="place_topics">Public Sentiments</div>
+                     <p class="place_text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deleniti est amet veniam maxime incidunt nostrum impedit corrupti libero. Totam, harum similique? Saepe rem, in culpa exercitationem eaque et nobis consequatur!
+                     Facilis facere exercitationem ducimus magni possimus! Exercitationem ratione dolores, aperiam, deserunt quis libero necessitatibus ut, magnam odio ipsa eum magni iste excepturi aspernatur beatae perferendis porro? Maxime possimus natus ex.</p>
+                     <p class="place_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero hic rerum modi asperiores, eaque distinctio, consequuntur, quos nam neque temporibus nostrum? Repudiandae deserunt, fugiat deleniti minima ratione delectus perferendis labore.
+                     Dolor reprehenderit inventore accusamus rem quae architecto optio nobis libero animi nam fugit amet.</p>
                   </div>
                </div>
             </div>
@@ -95,12 +100,23 @@
             <div class="row">
                <div class="col-md-6">
                   <div class="place_title_main">
-                     <p class="place_text">We are a group of people working together with a common mindset. Our vision is to make travelling easier and safer. We visit places, talk to local people and then review places along with genuine feedback from other visitors and latest images.</p>
-                     <p class="place_text">Apart from all these, We provide overview of the local people behavior and supportiveness, cleaniness around the spot and accessibility to the basic need items.</p>
+                    <div class="place_topics">Suggestion and Instructions</div>
+                    <div>
+                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
+                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
+                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
+                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
+                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
+                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
+                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
+                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
+                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
+                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
+                     </div>
                   </div>
                </div>
                <div class="col-md-6">
-                  <div class="place_image" style="margin-top: 50px;"><img src="../images/img-9.JPG"></div>
+                  <div class="place_image" style="margin-top: 50px;"><img src="../images/img-18.jpg"></div>
                </div>
             </div>
          </div>
