--- a/src/places/mana.html
+++ b/src/places/mana.html
@@ -69,8 +69,10 @@
                <div class="place_title">MANA VILLAGE</div>
                <div class="col-md-6">
                   <div class="place_title_main">
-                     <p class="place_text">We are a group of people working together with a common mindset. Our vision is to make travelling easier and safer. We visit places, talk to local people and then review places along with genuine feedback from other visitors and latest images.</p>
-                     <p class="place_text">Apart from all these, We provide overview of the local people behavior and supportiveness, cleaniness around the spot and accessibility to the basic need items.</p>
+                    <div class="place_topics">overview</div>
+                     <p class="place_text">
+                        Nestled in the lap of the Himalayas, Mana village in Uttarakhand, India, is a picturesque gem brimming with cultural significance. As the last Indian village before the Tibet border, Mana exudes an air of mystique. Visitors are enchanted by its quaint charm, ancient architecture, and the legendary Vyas Gufa, believed to be the meditation abode of the sage Veda Vyasa. With breathtaking vistas and its unique position, Mana village is a testament to the enduring spirit of the Himalayan way of life and an irresistible draw for those seeking a glimpse into both history and natural beauty.</p>
+                     <p class="place_text">Mana village is also a starting point for the challenging trek to the nearby Mana Pass, which serves as a trade route between India and Tibet. The pass provides breathtaking views of snow-capped peaks and alpine meadows, making it a favorite among trekkers and adventure enthusiasts.</p>
                   </div>
                </div>
                <div class="col-md-6">
@@ -81,12 +83,15 @@
          <div class="container">
             <div class="row">
                <div class="col-md-6">
-                  <div class="place_image" style="margin-top: 50px;"><img src="../images/img-8.JPG"></div>
+                  <div class="place_image" style="margin-top: 50px;"><img src="../images/img-10.jpg"></div>
                </div>
                <div class="col-md-6">
                   <div class="place_title_main">
-                     <p class="place_text">We are a group of people working together with a common mindset. Our vision is to make travelling easier and safer. We visit places, talk to local people and then review places along with genuine feedback from other visitors and latest images.</p>
-                     <p class="place_text">Apart from all these, We provide overview of the local people behavior and supportiveness, cleaniness around the spot and accessibility to the basic need items.</p>
+                    <div class="place_topics">Public Sentiments</div>
+                     <p class="place_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga ducimus voluptates minus nisi facilis atque voluptatibus reiciendis nostrum blanditiis veritatis molestiae ad fugit quam error, numquam similique temporibus et cum?
+                     Ipsa maxime deserunt provident ratione porro, fugit nihil rem quod autem ex aliquam odio minus? Soluta voluptate quidem explicabo repellendus similique blanditiis ut enim cumque facilis sed, aspernatur est ipsa?</p>
+                     <p class="place_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis suscipit cupiditate esse, saepe, nesciunt odio quidem quam ducimus maxime ex id asperiores! Obcaecati earum hic excepturi, incidunt officia harum! Ullam.
+                     Veritatis, cupiditate. Sunt cupiditate vitae, natus ullam ipsa cumque ea est.</p>
                   </div>
                </div>
             </div>
@@ -95,12 +100,23 @@
             <div class="row">
                <div class="col-md-6">
                   <div class="place_title_main">
-                     <p class="place_text">We are a group of people working together with a common mindset. Our vision is to make travelling easier and safer. We visit places, talk to local people and then review places along with genuine feedback from other visitors and latest images.</p>
-                     <p class="place_text">Apart from all these, We provide overview of the local people behavior and supportiveness, cleaniness around the spot and accessibility to the basic need items.</p>
+                    <div class="place_topics">Suggestion and Instructions</div>
+                    <div>
+                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
+                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
+                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
+                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
+                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
+                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
+                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
+                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
+                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
+                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
+                    </div>
                   </div>
                </div>
                <div class="col-md-6">
-                  <div class="place_image" style="margin-top: 50px;"><img src="../images/img-9.JPG"></div>
+                  <div class="place_image" style="margin-top: 50px;"><img src="../images/img-11.jpg"></div>
                </div>
             </div>
          </div>
