--- a/src/places/pauri.html
+++ b/src/places/pauri.html
@@ -69,8 +69,9 @@
                <div class="place_title">Pauri GARHWAL</div>
                <div class="col-md-6">
                   <div class="place_title_main">
-                     <p class="place_text">We are a group of people working together with a common mindset. Our vision is to make travelling easier and safer. We visit places, talk to local people and then review places along with genuine feedback from other visitors and latest images.</p>
-                     <p class="place_text">Apart from all these, We provide overview of the local people behavior and supportiveness, cleaniness around the spot and accessibility to the basic need items.</p>
+                     <div class="place_topics">overview</div>
+                     <p class="place_text">Pauri's allure lies not only in its captivating vistas but also in its tranquil ambiance. The town exudes a sense of serenity, making it an ideal destination for those seeking solace and rejuvenation. Nature enthusiasts are treated to a kaleidoscope of landscapes, from dense forests and rolling hills to meandering streams and cascading waterfalls. Trekkers and adventurers are drawn to the region's trekking trails and outdoor activities, providing an opportunity to explore the unspoiled beauty of the Himalayas.</p>
+                     <p class="place_text">Pauri serves as a gateway to the lesser-explored regions of the Garhwal Himalayas, making it an ideal base for further exploration. Its accessibility and serene ambiance offer a haven for travelers seeking a blend of natural beauty, cultural heritage, and a touch of adventure.</p>
                   </div>
                </div>
                <div class="col-md-6">
@@ -85,8 +86,11 @@
                </div>
                <div class="col-md-6">
                   <div class="place_title_main">
-                     <p class="place_text">We are a group of people working together with a common mindset. Our vision is to make travelling easier and safer. We visit places, talk to local people and then review places along with genuine feedback from other visitors and latest images.</p>
-                     <p class="place_text">Apart from all these, We provide overview of the local people behavior and supportiveness, cleaniness around the spot and accessibility to the basic need items.</p>
+                     <div class="place_topics">Public Sentiments</div>
+                     <p class="place_text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil deleniti culpa ratione mollitia necessitatibus quod magnam illo vero dolor, quibusdam amet reiciendis dolores aspernatur corrupti aliquam atque. Velit, porro dolore?
+                     Illo magnam vel perspiciatis facilis quam repudiandae consectetur vitae delectus. Dolore tenetur, ex tempora officia, eligendi sint, asperiores perferendis ipsum odio minus ut! Aliquid tempore ea cumque, culpa numquam omnis?</p>
+                     <p class="place_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, id, iste itaque ipsam beatae quas dignissimos aliquid dolorem ipsa nostrum nisi laborum? Consectetur voluptatem error, beatae aperiam porro tempora veritatis?
+                     Libero odio vero nostrum assumenda dicta earum, nam reiciendis consequuntur fugiat placeat sapiente consectetur dolore odit? Mollitia debitis labore necessitatibus officia hic ad facere natus in numquam. Quibusdam, blanditiis nam.</p>
                   </div>
                </div>
             </div>
@@ -95,12 +99,23 @@
             <div class="row">
                <div class="col-md-6">
                   <div class="place_title_main">
-                     <p class="place_text">We are a group of people working together with a common mindset. Our vision is to make travelling easier and safer. We visit places, talk to local people and then review places along with genuine feedback from other visitors and latest images.</p>
-                     <p class="place_text">Apart from all these, We provide overview of the local people behavior and supportiveness, cleaniness around the spot and accessibility to the basic need items.</p>
+                     <div class="place_topics">Suggestion and Instructions</div>
+                     <div>
+                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
+                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
+                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
+                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
+                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
+                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
+                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
+                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
+                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
+                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
+                     </div>
                   </div>
                </div>
                <div class="col-md-6">
-                  <div class="place_image" style="margin-top: 50px;"><img src="../images/img-6.jpg"></div>
+                  <div class="place_image" style="margin-top: 50px;"><img src="../images/img-12.jpg"></div>
                </div>
             </div>
          </div>
