--- a/src/places/rudraprayag.html
+++ b/src/places/rudraprayag.html
@@ -69,24 +69,29 @@
                <div class="place_title">Rudraprayag</div>
                <div class="col-md-6">
                   <div class="place_title_main">
-                     <p class="place_text">We are a group of people working together with a common mindset. Our vision is to make travelling easier and safer. We visit places, talk to local people and then review places along with genuine feedback from other visitors and latest images.</p>
-                     <p class="place_text">Apart from all these, We provide overview of the local people behavior and supportiveness, cleaniness around the spot and accessibility to the basic need items.</p>
+                    <div class="place_topics">overview</div>
+                     <p class="place_text">Rudraprayag: A Serene Fusion of Sacred Reverence and Breathtaking Grandeur</p>
+                     <p class="place_text">Tucked away in the embrace of the Garhwal Himalayas in Uttarakhand, India, Rudraprayag stands as a sublime testament to the natural marvels that grace this region. This name, a marriage of "Rudra" symbolizing Lord Shiva and "Prayag" denoting confluence, unveils a town where spirituality intertwines with awe-inspiring beauty, crafting an idyllic haven for both pilgrims and nature aficionados.</p>
+                     <p class="place_text">Rudraprayag's essence is encapsulated by the convergence of two revered rivers, the Alaknanda and the Mandakini. These crystal-clear waters unite in a graceful choreography, a visual symphony that evokes wonder and tranquility. This juncture is more than just a geographical occurrence; it carries profound religious significance, beckoning Hindu devotees to engage in a purifying ritualistic bath, rejuvenating not only the body but also the soul</p>
                   </div>
                </div>
                <div class="col-md-6">
-                  <div class="place_image" style="margin-top: 50px;"><img src="../images/img-7.jpg"></div>
+                  <div class="place_image" style="margin-top: 50px;"><img src="../images/img-6.jpg"></div>
                </div>
             </div>
          </div>
          <div class="container">
             <div class="row">
                <div class="col-md-6">
-                  <div class="place_image" style="margin-top: 50px;"><img src="../images/img-8.JPG"></div>
+                  <div class="place_image" style="margin-top: 50px;"><img src="../images/img-3.jpg"></div>
                </div>
                <div class="col-md-6">
                   <div class="place_title_main">
-                     <p class="place_text">We are a group of people working together with a common mindset. Our vision is to make travelling easier and safer. We visit places, talk to local people and then review places along with genuine feedback from other visitors and latest images.</p>
-                     <p class="place_text">Apart from all these, We provide overview of the local people behavior and supportiveness, cleaniness around the spot and accessibility to the basic need items.</p>
+                    <div class="place_topics">Public Sentiments</div>
+                     <p class="place_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex excepturi fugit veritatis neque! Amet esse porro magni accusantium itaque, repellat consequatur dolorum reprehenderit? Tempora quo ab adipisci iste obcaecati ipsam.
+                     Sed laboriosam expedita in ex magni quod, fugit, obcaecati doloribus at aut natus. Rem quasi ab mollitia nemo consequuntur, sint velit quas? Sapiente ipsum deleniti est temporibus similique, saepe nemo.</p>
+                     <p class="place_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto dignissimos laborum consequatur? Dicta natus itaque in autem. Ipsa nemo odit animi alias? Corporis officia ipsa reprehenderit eveniet quo! Tempore, possimus.
+                     Dicta voluptatem, veritatis quibusdam voluptates iure velit culpa laborum! Doloremque earum molestiae ullam, nobis ex minus, veritatis nostrum maiores officia unde nesciunt optio quia excepturi ducimus aliquid voluptate commodi corporis?</p>
                   </div>
                </div>
             </div>
@@ -95,8 +100,19 @@
             <div class="row">
                <div class="col-md-6">
                   <div class="place_title_main">
-                     <p class="place_text">We are a group of people working together with a common mindset. Our vision is to make travelling easier and safer. We visit places, talk to local people and then review places along with genuine feedback from other visitors and latest images.</p>
-                     <p class="place_text">Apart from all these, We provide overview of the local people behavior and supportiveness, cleaniness around the spot and accessibility to the basic need items.</p>
+                    <div class="place_topics">Suggestion and Instructions</div>
+                    <div>
+                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
+                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
+                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
+                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
+                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
+                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
+                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
+                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
+                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
+                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
+                     </div>
                   </div>
                </div>
                <div class="col-md-6">
