--- a/src/places/srinagar.html
+++ b/src/places/srinagar.html
@@ -69,8 +69,10 @@
                <div class="place_title">Srinagar</div>
                <div class="col-md-6">
                   <div class="place_title_main">
-                     <p class="place_text">We are a group of people working together with a common mindset. Our vision is to make travelling easier and safer. We visit places, talk to local people and then review places along with genuine feedback from other visitors and latest images.</p>
-                     <p class="place_text">Apart from all these, We provide overview of the local people behavior and supportiveness, cleaniness around the spot and accessibility to the basic need items.</p>
+                     <div class="place_topics">overview</div>
+                     <p class="place_text">Srinagar, not to be confused with its more famous namesake in Jammu and Kashmir, is a charming town nestled in the lap of the Garhwal Himalayas in Uttarakhand, India. This lesser-known Srinagar exudes a tranquil charm that resonates with both nature enthusiasts and seekers of cultural experiences.</p>
+                     <p class="place_text">Srinagar is a place where history and spirituality converge. The town is home to several ancient temples and shrines, each with its own tale of reverence. The Kamleshwar Temple, dedicated to Lord Shiva, and the Dhari Devi Temple are among the notable spiritual landmarks that attract pilgrims and devotees.</p>
+                     <p class="place_text">Srinagar's strategic location along the route to Badrinath and other Himalayan destinations makes it a convenient stopover for travelers embarking on spiritual journeys or seeking adventure.</p>
                   </div>
                </div>
                <div class="col-md-6">
@@ -85,8 +87,11 @@
                </div>
                <div class="col-md-6">
                   <div class="place_title_main">
-                     <p class="place_text">We are a group of people working together with a common mindset. Our vision is to make travelling easier and safer. We visit places, talk to local people and then review places along with genuine feedback from other visitors and latest images.</p>
-                     <p class="place_text">Apart from all these, We provide overview of the local people behavior and supportiveness, cleaniness around the spot and accessibility to the basic need items.</p>
+                     <div class="place_topics">Public Sentiments</div>
+                     <p class="place_text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nam numquam, sit minus fugit provident reiciendis vitae necessitatibus placeat alias deleniti quasi? At quisquam aliquam id deleniti reiciendis numquam, voluptates provident!
+                     Impedit vitae, deleniti id libero incidunt facilis rerum vel temporibus tenetur recusandae! Consequuntur nesciunt molestiae possimus quis voluptatibus laborum porro aperiam error, adipisci nam. Consectetur velit placeat excepturi autem optio.</p>
+                     <p class="place_text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nam numquam, sit minus fugit provident reiciendis vitae necessitatibus placeat alias deleniti quasi? At quisquam aliquam id deleniti reiciendis numquam, voluptates provident!
+                     Impedit vitae, deleniti id libero incidunt facilis rerum vel temporibus tenetur recusandae! Consequuntur nesciunt molestiae possimus quis voluptatibus laborum porro aperiam error, adipisci nam. Consectetur velit placeat excepturi autem optio.</p>
                   </div>
                </div>
             </div>
@@ -95,12 +100,23 @@
             <div class="row">
                <div class="col-md-6">
                   <div class="place_title_main">
-                     <p class="place_text">We are a group of people working together with a common mindset. Our vision is to make travelling easier and safer. We visit places, talk to local people and then review places along with genuine feedback from other visitors and latest images.</p>
-                     <p class="place_text">Apart from all these, We provide overview of the local people behavior and supportiveness, cleaniness around the spot and accessibility to the basic need items.</p>
+                     <div class="place_topics">Suggestion and Instructions</div>
+                     <div>
+                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
+                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
+                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
+                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
+                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
+                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
+                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
+                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
+                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
+                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
+                     </div>
                   </div>
                </div>
                <div class="col-md-6">
-                  <div class="place_image" style="margin-top: 50px;"><img src="../images/img-3.jpg"></div>
+                  <div class="place_image" style="margin-top: 50px;"><img src="../images/img-13.jpg"></div>
                </div>
             </div>
          </div>
